# Orchestration-kedro-project

./: .gitignore  README.md  mlflow.db  pyproject.toml  pytest.ini  requirements.txt
conf/base/: catalog.yml  mlflow.yml  parameters.yml  spark.yml
docs/source/: conf.py
examples/: flask_api_examples.py
notebooks/: opti-hyper-param.py  validate-and-test-model.py  validation-interpretability.py
notebooks/course/: Flask.py  Kedro.py  Optimisation des hyper-paramètres.py  Tests de modèles.py  Tests logiciels.py  Validation et interprétabilité.py
scripts/: __init__.py  run_full_pipeline.py  start_flask_api.py  start_mlflow_ui.py  test_api.py
src/kedro_project/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
src/kedro_project/api/: README.md  __init__.py  app.py  models.py  routes.py  run_server.py  swagger.json  utils.py
src/kedro_project/pipelines/: __init__.py
src/kedro_project/pipelines/data_processing/: nodes.py  pipeline.py
src/kedro_project/pipelines/hyperparameter_optimization/: nodes.py  pipeline.py
src/kedro_project/pipelines/model_interpretability/: nodes.py  pipeline.py
src/kedro_project/pipelines/model_validation/: nodes.py  pipeline.py
src/kedro_project/utils/: __init__.py  mlflow_utils.py
tests/: conftest.py  test_api.py  test_run.py
tests/fixtures/: catalog.py
tests/fixtures/data/: processed.py  raw.py
tests/fixtures/models/: base.py  trained.py
tests/hooks/: test_hooks.py
tests/models/baseline/: test_directional.py  test_invariance.py  test_post_training.py  test_pre_training.py  test_unit.py
tests/pipelines/: test_data_processing.py  test_hyperparameter_optimization.py  test_model_interpretability.py  test_model_validation.py
tests/pipelines/data_processing/: __init__.py  test_nodes.py
tests/pipelines/hyperparameter_optimization/: __init__.py  test_nodes.py
tests/pipelines/model_interpretability/: __init__.py  test_nodes.py
tests/pipelines/model_validation/: __init__.py  test_nodes.py
tests/utils/: test_mlflow_utils.py
